--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="lib/js/underscore.min.js"></script>
     <script src="lib/js/backbone.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/Model.js"></script>
+    <script src="js/View.js"></script>
 </body>
 </html>
