--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/Model.js"></script>
     <script src="js/View.js"></script>
+    <script src="js/Collection.js"></script>
+
 </body>
 </html>
